--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,5 @@
-#########################################################
-###FREEMARKER(FreeMakerAutoConfiguration)
-#########################################################
-spring.freemarker.allow-request-override=false
-spring.freemarker.cache=true
-spring.freemarker.check-template-location=true
-spring.freemarker.charset=utf-8
-spring.freemarker.content-type=text/html
-spring.freemarker.expose-request-attributes=false
-spring.freemarker.allow-session-override=false
-spring.freemarker.expose-spring-macro-helpers=false
-#spring.freemarker.prefix=
-#spring.freemarker.request-context-attribute=
-#spring.freemarker.settings.*=
-spring.freemarker.suffix=.ftl
-spring.freemarker.template-loader-path=classpath:/templates/
-#comma-separated list
-#spring.freemarker.view-names=whitelist of view names that can be resolved
+spring.datasource.url=jdbc:mysql://localhost:3306/springboot?useUnicode=true&characterEncoding=UTF-8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
