--- a/springboot/pom.xml
+++ b/springboot/pom.xml
@@ -20,6 +20,15 @@
 	</properties>
 
 	<dependencies>
+		<dependency>
+			<groupId>org.mybatis.spring.boot</groupId>
+			<artifactId>mybatis-spring-boot-starter</artifactId>
+			<version>1.3.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
 		<!--SpringBoot-webflux组件-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
